--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: any_link_preview
 description: A flutter package/plugin which will help you to show preview of web links. Can be useful in chat for example.
-version: 1.0.2
+version: 1.0.3
 # author: Suresh Konakanchi
 homepage: https://github.com/sur950/
 repository: https://github.com/sur950/any_link_preview
@@ -30,13 +30,13 @@ flutter:
   # The 'pluginClass' and Android 'package' identifiers should not ordinarily
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
-  plugin:
-    platforms:
-      android:
-        package: com.example.any_link_preview
-        pluginClass: AnyLinkPreviewPlugin
-      ios:
-        pluginClass: AnyLinkPreviewPlugin
+  # plugin:
+  #   platforms:
+  #     android:
+  #       package: com.example.any_link_preview
+  #       pluginClass: AnyLinkPreviewPlugin
+  #     ios:
+  #       pluginClass: AnyLinkPreviewPlugin
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
