--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,21 @@
 name: any_link_preview
 description: A flutter package/plugin which will help you to show preview of web links. Can be useful in chat for example.
-version: 1.0.6
+version: 1.0.7
 # author: Suresh Konakanchi
 homepage: https://github.com/sur950/
 repository: https://github.com/sur950/any_link_preview
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.20.0 <2.0.0"
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
   gbk2utf8: ^1.0.1
-  http: ^0.12.2
-  html: ^0.14.0+3
-  url_launcher: ^5.5.0
+  http: ^0.13.0
+  html: ^0.15.0
+  url_launcher: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -26,18 +26,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' and Android 'package' identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
-  # plugin:
-  #   platforms:
-  #     android:
-  #       package: com.example.any_link_preview
-  #       pluginClass: AnyLinkPreviewPlugin
-  #     ios:
-  #       pluginClass: AnyLinkPreviewPlugin
-  # To add assets to your plugin package, add an assets section, like this:
+
+  # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -47,7 +37,8 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-  # To add custom fonts to your plugin package, add a fonts section here,
+
+  # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
