--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,9 @@ dependencies:
   flutter:
     sdk: flutter
   gbk2utf8: ^1.0.1
-  http:
-  html:
-  url_launcher:
+  http: ^0.12.2
+  html: ^0.14.0+4
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
