--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,21 @@
 name: any_link_preview
 description: A flutter package/plugin which will help you to show preview of web links. Can be useful in chat for example.
-version: 1.0.8
+version: 2.0.0
 # author: Suresh Konakanchi
 homepage: https://github.com/sur950/
 repository: https://github.com/sur950/any_link_preview
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  gbk2utf8: ^1.0.1
-  http: ^0.12.2
-  html: ^0.14.0+4
-  url_launcher: ^5.7.10
+  charset_converter: ^2.0.0
+  http: ^0.13.3
+  html: ^0.15.0
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
