added collection package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   html: ^0.15.0
   http: ^0.13.3
   url_launcher: ^6.0.3
+  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
