--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: any_link_preview
 description: A flutter package/plugin which will help you to show preview of web
   links. It is more useful for the application which has chat feature.
-version: 2.0.3
+version: 2.0.4
 # author: Suresh Konakanchi
-homepage: https://github.com/sur950/
+homepage: https://suresh-konakanchi.in/
 repository: https://github.com/sur950/any_link_preview
 
 environment:
@@ -11,6 +11,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  cache_manager: ^1.0.0+4
   flutter:
     sdk: flutter
   html: ^0.15.0
