--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: any_link_preview
 description: A flutter package/plugin which will help you to show preview of web
   links. It is more useful for the application which has chat feature.
-version: 2.0.5
+version: 2.0.6
 # author: Suresh Konakanchi
 homepage: https://suresh-konakanchi.in/
 repository: https://github.com/sur950/any_link_preview
@@ -22,6 +22,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  lints: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
