--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: any_link_preview
-description: A flutter package/plugin which will help you to show preview of web
-  links. It is more useful for the application which has chat feature.
-version: 2.0.7
+description: Dart package that helps with preview of any links. 
+  Fully customizable and has the ability to render from cached data. 
+  Useful for apps where we had chat feature.
+version: 2.0.8
 # author: Suresh Konakanchi
 homepage: https://suresh-konakanchi.in/
 repository: https://github.com/sur950/any_link_preview
@@ -15,14 +16,14 @@ dependencies:
     sdk: flutter
   html: ^0.15.0
   http: ^0.13.4
-  shared_preferences: ^2.0.13
+  shared_preferences: ^2.0.14
   string_validator: ^0.3.0
-  url_launcher: ^6.0.20
+  url_launcher: ^6.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lints: ^1.0.1
+  lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
