--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,28 +2,28 @@ name: any_link_preview
 description: Dart package that helps with preview of any links. 
   Fully customizable and has the ability to render from cached data. 
   Useful for apps where we had chat feature.
-version: 3.0.1
+version: 3.0.2
 # author: Suresh Konakanchi
 homepage: https://suresh-konakanchi.in/
 repository: https://github.com/sur950/any_link_preview
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=3.1.0 <4.0.0'
+  flutter: ">=3.13.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  html: ^0.15.3
-  http: ^1.0.0
-  shared_preferences: ^2.1.1
-  string_validator: ^1.0.0
-  url_launcher: ^6.1.11
+  html: ^0.15.4
+  http: ^1.2.1
+  shared_preferences: ^2.2.2
+  string_validator: ^1.0.2
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lints: ^2.1.1
+  lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
