--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -1,28 +1,36 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    unnecessary_overrides: true
+    always_declare_return_types: true
+    avoid_escaping_inner_quotes: true
+    avoid_setters_without_getters: true
+    cast_nullable_to_non_nullable: true
+    close_sinks: true
+    no_adjacent_strings_in_list: true
+    no_default_cases: true
+    omit_local_variable_types: true
+    only_throw_errors: true
+    prefer_interpolation_to_compose_strings: true
+    prefer_single_quotes: true
+    sort_child_properties_last: true
+    test_types_in_equals: true
+    unawaited_futures: true
+    unnecessary_parenthesis: true
+    unnecessary_raw_strings: true
+    unnecessary_statements: true
+    unsafe_html: true
+    use_raw_strings: true
+    sized_box_for_whitespace: true
+    prefer_const_constructors: true
+    comment_references: true
+    avoid_multiple_declarations_per_line: true
+    noop_primitive_operations: true
+    cascade_invocations: true
+    avoid_redundant_argument_values: true
+    lines_longer_than_80_chars: true
+    prefer_int_literals: true
+    prefer_const_constructors_in_immutables: true
+    avoid_void_async: true
+    require_trailing_commas: true
